--- a/Nhom3/form.html
+++ b/Nhom3/form.html
@@ -8,37 +8,94 @@
 <body>
 	<div class="index">
 		<div class="box1">
-			<div class="logo">
-				<img src="https://pbs.twimg.com/media/DfGrn_nWsAIt_LT.jpg">
-				<h1>Colla</h1>
-				<h2>bid</h2>
-				<div class="menu">
+			<img src="https://pbs.twimg.com/media/DfGrn_nWsAIt_LT.jpg">
+			<h1>Colla</h1>
+			<h2>bid</h2>
+			<div class="menu">
 					<ul>
 						<li style="margin-left: -1rem;"><a href="">HOME</a></li>
 						<li><a href="">ARTIST</a></li>
 						<li><a href="">EVENT</a></li>
 						<li><a href="">LOGIN</a></li>
 						<li><a href="">SIGN UP</a></li>
-						<li style="margin-left: 19rem;"><a href="">MENU</a></li>
+						<li style="margin-left: 12rem;"><a href="">MENU</a></li>
 					</ul>
 
-				</div>
 			</div>
 			<h3>FIND & HIRE <br> ARTIST FROM </h3>
 			<h4>America's Largest Talent Plateform</h4>
 			<a href="">
 				<div class="click1">
-					<h5 style="margin-left: 2.5rem;">REGISTER</h5>
+					<h5>REGISTER</h5>
 					<h6>AS A ARTIST</h6>
 				</div>
 			</a>
 			<a href="">
 				<div class="click2">
-					<h5 style="margin-left: 5rem;">FIND </h5>
+					<h5 >FIND </h5>
 					<h6 >ARTIST</h6> 
 				</div>
 			</a>
-		</div>	
+		</div>
+		<div class="box2">
+			<div class="menu-box2">
+				<div class="left">
+					<h1>LATEST JOBS</h1>
+				</div>
+				<div class="mid">
+					<ul>
+						<li style="margin-left: -2.48rem;"><a href="" style="margin-left: 2.7rem;">All</a></li>
+						<li><a href="" style="margin-left: 1rem;">Singers</a></li>
+						<li><a href="" style="margin-left: 0.8rem;">Musician</a></li>
+						<li><a href="" style="margin-left: 2rem;">DJs</a></li>
+						<li><a href="">Actors</a></li>
+					</ul>
+				</div>
+				<div class="right">
+					<h1>FEATURED ARTIST</h1>
+				</div>
+			</div>
+			<div class="index-box2">
+				<div class="index-box2-box">
+					<div class="index-box2-box-content">
+						<p>Singer Required For our upcoming event</p>
+					</div>
+					<div class="index-box2-box-text">
+						<p>Gender: Femate</p>
+						<p>Age Required: 20 to 25</p>
+						<p>Location</p>
+						<p>Job Posted on: 23 Feb, 2018</p>
+						<a href="" style="text-decoration: none; text-align: center;"><div class="view">VIEW JOB</p></div></a>
+					</div>
+				</div>
+				<div class="index-box2-box" style="border: 1px solid #00a9d4">
+					<div class="index-box2-box-content" style="background-color:#00a9d4 ">
+						<p>Singer Required For our upcoming event</p>
+					</div>
+					<div class="index-box2-box-text">
+						<p>Gender: Femate</p>
+						<p>Age Required: 20 to 25</p>
+						<p>Location</p>
+						<p>Job Posted on: 23 Feb, 2018</p>
+						<a href="" style="text-decoration: none; text-align: center;"><div class="view" style="background-color: #00a9d4">VIEW JOB</p></div></a>
+					</div>
+				</div>
+				<div class="index-box2-box">
+					<div class="index-box2-box-content">
+						<p>Singer Required For our upcoming event</p>
+					</div>
+					<div class="index-box2-box-text">
+						<p>Gender: Femate</p>
+						<p>Age Required: 20 to 25</p>
+						<p>Location</p>
+						<p>Job Posted on: 23 Feb, 2018</p>
+						<a href="" style="text-decoration: none; text-align: center;"><div class="view">VIEW JOB</p></div></a>
+					</div>
+				</div>
+				<div class="ima"></div>
+			</div>
+		</div>
+		<div class="box3"></div>
 	</div>
 
 </body>
