--- a/Nhom3/form.html
+++ b/Nhom3/form.html
@@ -92,10 +92,54 @@
 						<a href="" style="text-decoration: none; text-align: center;"><div class="view">VIEW JOB</p></div></a>
 					</div>
 				</div>
-				<div class="ima"></div>
 			</div>
 		</div>
-		<div class="box3"></div>
+		<div class="box3">
+			<div class="Mon">
+				<h2>MONETIZE YOURSELF AS AN ARTIST</h2>
+				<h4>by adding your exellence shills</h4>
+				<a href="#"><div class="CLCC"><p>REGITER AS AN ARTIST</p></div></a>
+			</div>
+			<div class="menu">
+				<h2>UPCOMING PROJECTS</h2>
+				<ul class="menu">
+				<li><a href="#">All</a></li>
+				<li><a href="#">Movies</a></li>
+				<li><a href="#">Dancing shows</a></li>
+				<li><a href="#">Singing shows</a></li>
+				<li><a href="#">Magic shows</a></li>
+				</ul>
+			</div>
+			<div class="khung">
+				<div class="khungduoi">
+					<img src="img/1.jpg">
+					<p>Skyline<br>
+					Location: NewYork <br>
+					Shooting date: 23 Feb, 2019</p>
+				</div>
+				<div class="khungduoi" >
+					<img src="img/1.jpg">
+					<p>Skyline<br>
+					Location: NewYork <br>
+					Shooting date: 23 Feb, 2019</p>
+				</div>
+				<div class="khungduoi">
+					<img src="img/1.jpg">
+					<p>Skyline<br>
+					Location: NewYork <br>
+					Shooting date: 23 Feb, 2019</p>
+				</div>
+				<div class="khungduoi">
+					<img src="img/1.jpg">
+					<p>Skyline<br>
+					Location: NewYork <br>
+					Shooting date: 23 Feb, 2019</p>
+					</div>
+				</div>
+		<content> <a href="#">View All Projects </a></content>
+	</div>
+
+
 	</div>
 
 </body>
