update code ngay 28_10

--- a/Nhom3/form.html
+++ b/Nhom3/form.html
@@ -138,8 +138,90 @@
 				</div>
 		<content> <a href="#">View All Projects </a></content>
 	</div>
-
-
+	
+	<div class="box6">
+		<div class="content"> 
+			<div class="h3-1"><h3>UPCOMING</h3></div>
+			<div class="h3-2"><h3>EVENT</h3></div>
+		</div>
+			
+			<table>
+				
+				<tbody>
+					<!-- bắt đầu -->
+					<tr>
+						<td >Shipping Handling <br>
+							 Shipping Handling
+						</td>
+						<td class="ima"> <img src="https://png.pngtree.com/png-clipart/20190611/original/pngtree-cartoon-pictures-png-image_2745294.jpg"> 
+							<div class="content-td">Shipping Handling <br>
+						Shipping Handling	</div>
+						</td>
+						<td>Shipping Handling <br>
+							Shipping Handling
+						</td>
+						<td class="bottom">
+							<button>Click</button>
+						</td>
+					</tr>
+				</tbody>
+				<!-- kết thúc -->
+				<!-- bắt đầu -->
+					<tr>
+						<td >Shipping Handling <br>
+							 Shipping Handling
+						</td>
+						<td class="ima"> <img src="https://png.pngtree.com/png-clipart/20190611/original/pngtree-cartoon-pictures-png-image_2745294.jpg"> 
+							<div class="content-td">Shipping Handling <br>
+						Shipping Handling	</div>
+						</td>
+						<td>Shipping Handling <br>
+							Shipping Handling
+						</td>
+						<td class="bottom">
+							<button>Click</button>
+						</td>
+					</tr>
+				</tbody>
+				<!-- kết thúc -->
+				<!-- bắt đầu -->
+					<tr>
+						<td >Shipping Handling <br>
+							 Shipping Handling
+						</td>
+						<td class="ima"> <img src="https://png.pngtree.com/png-clipart/20190611/original/pngtree-cartoon-pictures-png-image_2745294.jpg"> 
+							<div class="content-td">Shipping Handling <br>
+						Shipping Handling	</div>
+						</td>
+						<td>Shipping Handling <br>
+							Shipping Handling
+						</td>
+						<td class="bottom">
+							<button>Click</button>
+						</td>
+					</tr>
+				</tbody>
+				<!-- kết thúc -->
+				<!-- bắt đầu -->
+					<tr>
+						<td >Shipping Handling <br>
+							 Shipping Handling
+						</td>
+						<td class="ima"> <img src="https://png.pngtree.com/png-clipart/20190611/original/pngtree-cartoon-pictures-png-image_2745294.jpg"> 
+							<div class="content-td">Shipping Handling <br>
+						Shipping Handling	</div>
+						</td>
+						<td>Shipping Handling <br>
+							Shipping Handling
+						</td>
+						<td class="bottom">
+							<button>Click</button>
+						</td>
+					</tr>
+				</tbody>
+				<!-- kết thúc -->
+			</table>
+	</div>
 	</div>
 
 </body>
